# linebot

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py
src/linebot/: __init__.py  app.py
vectorDB/: createVectorStore.py  pttCrawler.py
